--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-gradio
-ultralytics
-opencv-python
-numpy
-pillow
 dill
+opencv-python-headless==4.5.5.64
+ultralytics==8.0.3
+streamlit==1.10.0
+numpy==1.22.4
+Pillow==9.1.1
